[package]
name = "llrp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
bytes = "1"
strum = "0.24.1"
strum_macros = "0.24.1"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4.38"

[lib]
name = "llrp_client"
crate-type = ["cdylib"]

[[bin]]
name = "test_runtime"
path = "src/main.rs"